# sagitario-engine

./: .gitignore  Cargo.toml  LICENSE.rst  Makefile  README.md  build.rs
.cargo/: config.toml
core/debugger/: Cargo.toml
core/logger/: Cargo.toml
core/logger/src/: lib.rs
core/profiler/: Cargo.toml
core/profiler/src/: lib.rs
editor/: Cargo.toml
editor/src/: main.rs
editor/src/vulkan/: commands.rs  device.rs  mod.rs  semaphore.rs  spawnchain.rs  validation_vk.rs
editor/src/vulkan/pipe/: mod.rs
editor/src/vulkan/pipe/shader/.tmp/triangle/: shader.frag
modules/sagitario-lng/: Cargo.toml
modules/sagitario-lng/src/: lib.rs  main.rs
modules/sagitario-lng/src/compiler/: csg_chunk.rs  debug.rs  memory.rs  mod.rs  value.rs
src/: main.rs
src/vulkan/: device.rs  framebuffers.rs  mod.rs  physical_device.rs  queue_family.rs  spawnchain.rs  spawnchair.rs  validation_vk.rs
src/vulkan/pipe/: mod.rs  render_pass.rs
src/vulkan/pipe/shader/: compiler.rs  mod.rs
src/vulkan/pipe/shader/.tmp/triangle/: shader.frag  shader.vert
src/vulkan/utils/: mod.rs
