[package]
name = "sagitario-engine"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkanalia = { version = "0.25.0", features = ["libloading", "provisional", "window"] }
raw-window-handle = { version = "0.6", optional = true }
vulkanalia-sys = "0.25.0"
vulkanalia-vma = "0.2.0"
anyhow = "1.0.93"
winit = "0.30.5"

[target.'cfg(target_os = "macos")'.dependencies]

cocoa = { version = "0.25", optional = true }
metal = { version = "0.27", optional = true }
objc = { version = "0.2", optional = true }