[package]
name = "sagitario-engine"
version = "0.1.0"
edition = "2021"
readme = "README.md"

authors = ["juanestbandev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkanalia = { version = "0.25.0", features = ["libloading", "provisional", "window"] }
raw-window-handle = { version = "0.6", optional = true }
vulkanalia-sys = "0.25.0"
vulkanalia-vma = "0.2.0"
anyhow = "1.0.93"
winit = "0.30.5"
log = "0.4"
pretty_env_logger = "0.5"
png = "0.17"
thiserror = "2.0.3"
tobj = { version = "4.0.2", features = ["log"] }
cgmath = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]

cocoa = { version = "0.26", optional = true }
metal = { version = "0.30", optional = true }
objc = { version = "0.2", optional = true }
