[workspace]
members = ["modules/sagitario-lng", "editor", "core/profiler", "core/debugger", "core/logger"]

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
overflow-checks = false

[patch.crates-io]

[workspace.package]
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["juanestbandev"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
